--- a/moving/templates/gallery.html
+++ b/moving/templates/gallery.html
@@ -9,9 +9,8 @@
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
 <link rel="stylesheet" href="{% static 'css/footer.css' %}">
 <!------ Include the above in your HEAD tag ---------->
-<body style='background: rgb(2, 2, 39)'>
 
-    <nav class="navbar navbar-expand-lg mb-4 top-bar navbar-static-top sps sps--abv">
+<nav class="navbar navbar-expand-lg mb-4 top-bar navbar-static-top sps sps--abv">
         <div class="container">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse1" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,17 +30,54 @@
       </div>
             </div>
     </nav>
-        
-        
-        
-      <h1  style='font-size: 45px;
-      color:white; text-align: center; padding-top: 300px; padding-bottom: 300px;'>
-      Thank you for Contacting us, <br>
-      we will get back to you in a few minutes.
-      </h1>  
-    
-</body>
 
+    <section  id="images">
+
+ 
+
+            <h2 style='text-align: center; margin-top: 50px; padding-top: 50px;'>Our Gallery</h2>
+          
+            <!--Grid row-->
+            <div class="container">
+                <div class="row">
+                        {%for post in posts%}
+                    <div class="col-lg-4 col-md-4 mb-4">
+                     
+                            <div class="col-md-4 image-holder ">
+          
+                                    <img class="display" src="{{post.image.url}}" alt="" style="width: 320px; height: 300px;" > <br> <br> <br>
+                                   
+                            </div>
+                      
+                
+                      <p class="grey-text">"Aberdare {{post.description}}</p>
+                
+                  </div>
+                  <br><br><br>
+                  {%endfor%}
+                
+            
+                
+        
+                </section> 
+
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/aos.js"></script>
+<script src="js/jquery.animateNumber.min.js"></script>
+<script src="js/scrollax.min.js"></script>
+
+<script src="js/main.js"></script>
+
+</body>
+</html>
 
 
       
